# optics-common

./: README.md  environment.yml  install.sh  pyproject.toml
opics_common/launch/: constants.py  eval6_agent.py  opics_run_state.py  replay_controller.py  replay_scene_fetcher.py  utils.py
opics_common/opics_logging/: log_constants.py  log_loader.py  log_spec.py  logging_spec.txt  mock_log_pvoe_run.py  mock_log_pvoe_runs.py  mock_run_opics.py  opics_logs.py  results_reader.py  scene_log.py  scene_logger.py  stdout_log.py  stdout_logs.py
opics_common/results/: avoe_pair.py  avoe_pairs.py  eval_results_ev6_columns.py  eval_results_int.py  eval_results_pvoe.py  header_val_indices.py  log_stats.py  stats_avoe.py  stats_inter.py  stats_output.py  stats_pvoe.py
opics_common/results/ev4/: cube_info.py  eval4_into_6.py  eval4_results_level2_int_container.csv  eval4_results_level2_int_iop.csv  eval4_results_level2_int_obstacle.csv  eval4_results_level2_int_occluder.csv  eval5_training_set_rename.py  eval_results.py  filelist_from_hypercubes.py  gather_center_of_mass.py  gather_files_from_list.py  header_val_indices.py  most_confident_correct.py  objects.py  rename_as_per_results.py  run_prep.py  success_by_cube.py
opics_common/results/ev5/: create_avoe_optics_test_sets_for_eval5.py  create_inter_dev_test_dataset_from_test_sets.py  create_inter_optics_test_sets_for_eval5.py  create_pvoe_optics_test_sets_for_eval5.py  create_pvoe_rule_based_dev_set.py  create_pvoe_rule_based_dev_set_from_test_sets.py  eval_results_avoe_ev5.py  eval_results_inter_ev5.py  eval_results_pvoe_ev5.py  gather_unweighted_inter_scenes.py  header_val_indices_ev5.py  rename_eval5_scenes.py  ruleBasedDevSet_V3_noBounce_fileList.txt  scene_type_for_codeword.py
opics_common/results/ev6/: compare_numeric_string_gt.py  create_avoe_optics_test_sets_for_eval6.py  (+24 more)
opics_common/scene_type/: inter_scene_type_to_solver_map.py  type_constants.py
(+3 files in other folders)
