[tool.poetry]
name = "opics_common"
version = "0.1.0"
description = ""
authors = ["Mazen Alotaibi <alotaima@oregonstate.edu>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "3.7.13"
# NOTE(Mazen): we needed to use a certain version release of `wcwidth` because
# the latest release is broken and the prior release, which was released almost
# three years ago, is the actual used version for previous environment
# configuration
wcwidth = "0.2.5"
# tqdm = "^4.64.0"
numpy = "1.21"
# rich = "^12.5.1"
# loguru = "^0.6.0"
# pydantic = "^1.9.2"
# python-dotenv = "^0.20.0"
# opencv-python = "4.5.3.56"
# PyYAML = "6.0"
machine-common-sense = "0.6.4"
# devtools = "^0.9.0"
protobuf = "3.20.1"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
mypy = "^0.961"
pycln = "^2.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pre-commit-hooks = "^4.3.0"

[tool.mypy]
files = ["opics_common/"]
pretty = true
strict = true
# strict = false
show_error_codes = true
exclude = "(/tests/)|(/docs/)|(/examples/)"
# generated-members=["numpy.*","torch.*","torchvision.*","pytorch_lightning.*"]
ignore_missing_imports = true

# https://github.com/konradhalas/dacite/issues/133
# [[tool.mypy.overrides]]
# module = "pytorch_lightning.*"
# implicit_reexport = true

[tool.pytest.ini_options]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    # "-Wd",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79 # override the default of 88
force-exclude = '''
tests |
external
'''

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
